# company-classifier

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dokerfile  README.md  docker-compose.yaml  pyproject.toml
app/: db.py  main.py  models.py  prompts.py  schemas.py  utils.py
test_csvs/: companies1.csv  companies2.csv  companies3.csv  companies4.csv  companies5.csv
